DTCS-1 #time 5m #comment Apparently this issue fixed itself????#done DTCS-2 #time 3h #comment Began implementation of a collapsing modifier box. I created a collapsing div, but it seems to be bugging out. I have triple-checked that I am using the bootstrap collapse class properly, but the div will properly expand, but clicking the div again will not cause it to retract. While trying to diagnose the problem, I discovered I was having an issue with a module called "./.js/transition.js" missing. There should apparently be a transition.js file somewhere in our javascript folder, and I'm not sure where it's supposed to come from (whether it's bootstrap or meteor.)  Added and subsequently removed matb33::transition.js package.  I think this may be the root of the problem, but I'm probably going to have to ask Stack Overflow.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -32,6 +32,13 @@
 	background-color: #cccccc;
 	padding: 1%;
 }
+
+
+.vcenter{
+	display: inline-block;
+	vertical-align: middle;
+	float: none;
+}
 /*
 .col-md-4
 {
